fixed scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,28 +23,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* For Webkit Browsers (Chrome, Safari, Edge) */
-.custom-scrollbar::-webkit-scrollbar {
-  width: 8px;
+/* Scrollbar (Chrome, Safari, Edge) */
+::-webkit-scrollbar {
+  width: 6px;
+  border-radius: 6px;
 }
-
-.custom-scrollbar::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
+::-webkit-scrollbar-track {
+  background: transparent;
 }
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 10px;
-  border: 3px solid rgba(0, 0, 0, 0.2);
+::-webkit-scrollbar-thumb {
+  background: #27272a;
+  border-radius: 6px;
 }
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-/* For Firefox */
-.custom-scrollbar {
-  scrollbar-width: thin; /* set width of the scrollbar */
-  scrollbar-color: rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.1);
+::-webkit-scrollbar-thumb:hover {
+  background: #3f3f46;
 }
